# tre

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE.md  Makefile  Package.resolved  Package.swift  README.md  appveyor.yml  build.rs  flake.nix  shell.nix  snapcraft.yaml
.github/workflows/: automerge.yml  ci.yml  release.yml
Scripts/: Dockerfile-testing-linux  build-linux-packages-docker.sh  build-linux-packages.sh  develop-linux-docker.sh  integration-tests.py  run-tests-linux-docker.sh
Sources/tre/: Options+Parsing.swift  Options.swift  execute.swift  help.swift  main.swift  version.swift
Sources/treCore/: File+Formatting.swift  File.swift  FormattedLine.swift  Options.swift  PathProvider.swift  execute.swift  output.swift
ci/: before_deploy.ps1  before_deploy.sh  script.sh
fixtures/: .gitignore
manual/: tre.1
scripts/: check-version.py
scripts/completion/: _tre  _tre.ps1  tre.bash  tre.elv  tre.fish
src/: cli.rs  diagram_formatting.rs  file_tree.rs  formatting.rs  json_formatting.rs  lib.rs  main.rs  output.rs  path_finder.rs  path_finders.rs  tre.rs
tests/: integration_tests.rs
