[package]
name = "tre-command"
version = "0.3.6"
authors = ["Daniel Duan <daniel@duan.ca>"]
edition = "2018"
license = "MIT"
description = "Tree command, improved."
documentation = "https://github.com/dduan/tre/blob/master/README.md"
readme = "README.md"
homepage = "https://github.com/dduan/tre"
repository = "https://github.com/dduan/tre"
exclude = ["/.github/*", "alias_demo.gif", "flake.nix", "flake.lock", "scripts/*"]
keywords = ["cli", "tool", "filesystem", "Command line utilities"]
categories = ["command-line-utilities"]

[dependencies]
atty = "0.2"
getopts = "0.2"
slab = "0.4.2"
termcolor = "1"
walkdir = "2"
lscolors = "0.7.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "tre"
path = "src/main.rs"
