[package]
name = "tre-command"
version = "0.4.0"
authors = ["Daniel Duan <daniel@duan.ca>"]
edition = "2018"
license = "MIT"
description = "Tree command, improved."
documentation = "https://github.com/dduan/tre/blob/master/README.md"
readme = "README.md"
homepage = "https://github.com/dduan/tre"
repository = "https://github.com/dduan/tre"
exclude = ["/.github/*", "alias_demo.gif", "flake.nix", "flake.lock", "scripts/*", "fixtures/*"]
keywords = ["cli", "tool", "filesystem"
categories = ["command-line-utilities"]

[dependencies]
atty = "0.2"
clap = { version = "3.1.8", features = ["derive"] }
getopts = "0.2"
indexmap = "1.9.0"
lscolors = "0.7.1"
regex = "1.5.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
slab = "0.4.2"
termcolor = "1"
walkdir = "2"

[build-dependencies]
clap = { version = "3.1.8", features = ["cargo"] }
clap_complete = "3.1"

[dev-dependencies]
assert_cmd = "2.0"

[[bin]]
name = "tre"
path = "src/main.rs"
